# code-monkey-packages

./: .gitignore  .project  README.md
cmake/: gtest.cmake  no_root_build.cmake
cpp-automake-cli-exe/: README
cpp-automake-cli-exe-cppunit/: Makefile.am  configure.ac
cpp-automake-cli-exe-cppunit/src/: main.cpp
cpp-automake-cli-exe-cppunit/unittest/: Makefile.am
cpp-cmake-cli-exe/: CMakeLists.txt
cpp-cmake-cli-exe-cppunit/: CMakeLists.txt
cpp-cmake-cli-exe-cppunit/src/: CMakeLists.txt
cpp-cmake-cli-exe-cppunit/unittest/: CMakeLists.txt  cppunit-test-main.cpp  hello_test.cpp
cpp-cmake-cli-exe-gtest/: CMakeLists.txt
cpp-cmake-cli-exe-gtest/unittest/: CMakeLists.txt  hello_test.cpp
